---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useTask$, useStore, useStyles$ } from '@qwik.dev/core';
import mongo from 'mongodb';
import redis from 'redis';

export const Parent = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
		redis.set(state.text);
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
});

export const Child = component$(() => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		state.text = await mongo.users();
	});

	return (
		<div onClick$={() => console.log('child')}>
			{state.text}
		</div>
	);
});

============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.tsx (ENTRY POINT)==

import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useTask_gDH1EtUWqBU = async ()=>{
	const [state] = useLexicalScope();
	state.text = await mongo.users();
	redis.set(state.text);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_gDH1EtUWqBU",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    251,
    328
  ]
}
*/
============================= test.tsx_Child_component_useTask_Oh4n7ZeqJkU.tsx (ENTRY POINT)==

import mongo from "mongodb";
export const Child_component_useTask_Oh4n7ZeqJkU = async ()=>{
	const [state] = useLexicalScope();
	state.text = await mongo.users();
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useTask_Oh4n7ZeqJkU",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Child_component_useTask",
  "hash": "Oh4n7ZeqJkU",
  "canonicalFilename": "test.tsx_Child_component_useTask_Oh4n7ZeqJkU",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    539,
    591
  ]
}
*/
============================= test.tsx_Parent_component_0TaiDayHrlo.tsx (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_gDH1EtUWqBU = ()=>import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU");
export const Parent_component_0TaiDayHrlo = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_gDH1EtUWqBU, "Parent_component_useTask_gDH1EtUWqBU", [state]));
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_gDH1EtUWqBU, "Parent_component_useTask_gDH1EtUWqBU", [state])) }, null, state.text, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    167,
    419
  ]
}
*/
============================= test.tsx_Child_component_9GyF01GDKqw.tsx (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
const i_Oh4n7ZeqJkU = ()=>import("./test.tsx_Child_component_useTask_Oh4n7ZeqJkU");
export const Child_component_9GyF01GDKqw = ()=>{
	const state = useStore({ text: "" });
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_Oh4n7ZeqJkU, "Child_component_useTask_Oh4n7ZeqJkU", [state]));
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_Oh4n7ZeqJkU, "Child_component_useTask_Oh4n7ZeqJkU", [state])) }, null, state.text, 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": "./test.tsx_entry_Parent",
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    455,
    681
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_gDH1EtUWqBU = ()=>import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU");
const i_0TaiDayHrlo = ()=>import("./test.tsx_Parent_component_0TaiDayHrlo");
const i_Oh4n7ZeqJkU = ()=>import("./test.tsx_Child_component_useTask_Oh4n7ZeqJkU");
const i_9GyF01GDKqw = ()=>import("./test.tsx_Child_component_9GyF01GDKqw");
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_0TaiDayHrlo, "Parent_component_0TaiDayHrlo"));
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_9GyF01GDKqw, "Child_component_9GyF01GDKqw"));


None
== DIAGNOSTICS ==

[]
